--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
   "description": "Node.js backend with mongoDB + Authentication",
   "main": "index.js",
   "author": "shashika05",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3"
